unpackaged/main/default/objects/Third_Party_Actual__c/Third_Party_Actual__c.object-meta.xml
<CustomObject>
    <label>Third Party Actual</label>
    <nameField>
        <displayFormat>TPAR-{00000000}</displayFormat>
        <label>Third Party Actual</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Third Party Actuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>