unpackaged/main/default/objects/Third_Party_Actual__c/fields/Creative_Id__c.field-meta.xml
<CustomField>
    <fullName>Creative_Id__c</fullName>
    <label>Creative Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>