unpackaged/main/default/objects/Third_Party_Actual__c/fields/Custom_Report_Execution__c.field-meta.xml
<CustomField>
    <fullName>Custom_Report_Execution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Report Execution</label>
    <referenceTo>csdf__Custom_Report_Execution__c</referenceTo>
    <relationshipLabel>Third Party Actuals</relationshipLabel>
    <relationshipName>Third_Party_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>