unpackaged/main/default/objects/Third_Party_Actual__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Indicates source of information</description>
    <formula>IF(Custom_Report_Execution__c == &#39;&#39;, &#39;Manual&#39;, &#39;Integrated&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates source of information</inlineHelpText>
    <label>Source</label>
    <type>Text</type>
</CustomField>