unpackaged/main/default/objects/Third_Party_Actual__c/validationRules/Third_Party_Lock_Editing.validationRule-meta.xml
<ValidationRule>
    <fullName>Third_Party_Lock_Editing</fullName>
    <active>true</active>
    <description>On integrated records edit is not allowed</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; 
(Source__c == &#39;Integrated&#39; &amp;&amp;
PRIORVALUE(Source__c) == &#39;Integrated&#39;)</errorConditionFormula>
    <errorMessage>Changes cannot be performed on Integrated records.</errorMessage>
</ValidationRule>